log
Tue Mar 16 21:55:18 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:1: error: expected ‘;’ before ‘}’ token
 }
 ^
Compilation failed
Tue Mar 16 21:55:23 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
5e14e50
Tue Mar 16 22:25:07 UTC 2021: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
1193a42
Thu Mar 18 00:06:50 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
683417c
Thu Mar 18 00:07:38 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
1b05ded
Thu Mar 18 00:08:08 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
1bf2ed7
Thu Mar 18 00:08:47 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
8fc5457
Thu Mar 18 00:09:01 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
46e1c4b
Thu Mar 18 00:10:28 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
dca59d6
Thu Mar 18 00:10:49 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
13b9cb9
Thu Mar 18 00:12:28 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
a11a46b
Fri Mar 19 18:18:57 UTC 2021: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|6
total_score: 10/70
f3a4f90
Fri Mar 19 18:20:55 UTC 2021: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|5
total_score: 20/70
0c4f4f8
Fri Mar 19 19:10:43 UTC 2021: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
5b5ade2
